fixed scaling on mobile due to flower outside .container

--- a/css/base.css
+++ b/css/base.css
@@ -392,6 +392,9 @@ input[disabled] {
 	}
 /* Page component structure
 ---------------------------------------- */
+.container {
+	overflow-x: hidden;
+}
 .page-wrapper {
 	width: 80%;
 	margin: 0 auto 10ex;
